feat: integrating producers in services